# server.js
@@ -7,6 +7,7 @@ const YAML = require('yamljs');
 const swaggerDocument = YAML.load('./swagger.yaml');
 const host = 'https://ckan.smartcolumbusos.com/';
 const resourceId = '570a8e02-fb0e-4cee-895b-3b32bd740650';
+const queryHost = 'https://ckan.smartcolumbusos.com/api/3/action/datastore_search_sql?'
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
@@ -68,6 +69,32 @@ app.get('/pantries/:zipCode', function(req, res) {
         if (error) {
             console.log('error:', error); // Print the error if one occurred
         }
+        // console.log('body:', body);
+        res.send(body.result.records);
+    });
+});
+
+app.get('/query/pantries', function(req, res) {
+    let uri = `${queryHost}sql=SELECT*FROM"570a8e02-fb0e-4cee-895b-3b32bd740650"`;
+    const currentlyActive = req.query.currentlyActive;
+    if (currentlyActive && currentlyActive === 'true') {
+        uri = `${queryHost}sql=SELECT*FROM"570a8e02-fb0e-4cee-895b-3b32bd740650"WHERE"ACTIVE_FLAG"='Y'`;
+    }
+    const options = {
+        body: {},
+        headers: {
+            'Content-Type': 'application/json'
+        },
+        json: true,
+        method: 'GET',
+        uri,
+    };
+    request(options, function(error, response, body) {
+        console.log('statusCode:', response && response.statusCode); // Print the response status code if a response was received
+        if (error) {
+            console.log('error:', error); // Print the error if one occurred
+        }
+
         // console.log('body:', body);
         res.send(body.result.records);
     });
